--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,8 @@ flate2 = "1.0"
 scan_fmt = "0.2"
 reqwest = { version = "0.10", features = ["json"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
+lru = "0.4"
+
+[dev-dependencies]
+tempfile = "3.1.0"
+serial_test = "0.4.0"
